--- a/src/global copy.css
+++ b/src/global copy.css
@@ -10,7 +10,7 @@
     --card-foreground: hsl(0 0% 3.9%);
     --popover: hsl(0 0% 100%);
     --popover-foreground: hsl(0 0% 3.9%);
-    --primary: hsl(0 72.2% 50.6%);
+    --primary: hsl(194, 100%, 8%);
     --primary-foreground: hsl(0 85.7% 97.3%);
     --secondary: hsl(0 0% 96.1%);
     --secondary-foreground: hsl(0 0% 9%);
