Criando tabela de titulares

--- a/src/global copy.css
+++ b/src/global copy.css
@@ -12,7 +12,7 @@
     --popover-foreground: hsl(0 0% 3.9%);
     --primary: hsl(194, 100%, 8%);
     --primary-foreground: hsl(0 85.7% 97.3%);
-    --secondary: hsl(0 0% 96.1%);
+    --secondary: hsl(198 4% 40%;);
     --secondary-foreground: hsl(0 0% 9%);
     --muted: hsl(0 0% 96.1%);
     --muted-foreground: hsl(0 0% 45.1%);
