--- a/src/global.css
+++ b/src/global.css
@@ -5,7 +5,7 @@
 @layer base {
   :root {
     --background:30 2% 95%  ;
-    --foreground: 193 100% 8%;
+    --foreground: hsl(193 100% 8%);
     --card: 0 0% 100%;
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
