--- a/src/global.css
+++ b/src/global.css
@@ -14,10 +14,10 @@
     --card-foreground: 196 75% 3%;
     --border: 196 13% 89%;
     --input: 196 13% 89%;
-    --primary: 196 19% 44%;
+    --primary: 196 19% 50%;
     --primary-foreground: 0 0% 100%;
-    --secondary: 196 5% 86%;
-    --secondary-foreground: 196 5% 26%;
+    --secondary: 190 92% 15%;
+    --secondary-foreground: 196 5% 87%;
     --accent: 196 5% 86%;
     --accent-foreground: 196 5% 26%;
     --destructive: 15 99% 36%;
@@ -29,6 +29,14 @@
     --chart-4: 196 5% 89%;
     --chart-5: 196 22% 44%;
     --radius: 0.5rem;
+    --sidebar-background: 0 0% 98%;
+    --sidebar-foreground: 240 5.3% 26.1%;
+    --sidebar-primary: 240 5.9% 10%;
+    --sidebar-primary-foreground: 0 0% 98%;
+    --sidebar-accent: 240 4.8% 95.9%;
+    --sidebar-accent-foreground: 240 5.9% 10%;
+    --sidebar-border: 220 13% 91%;
+    --sidebar-ring: 217.2 91.2% 59.8%;
   }
 
   .dark {
@@ -42,9 +50,9 @@
     --card-foreground: 196 30% 97%;
     --border: 196 13% 10%;
     --input: 196 13% 10%;
-    --primary: 196 19% 44%;
+    --primary: 196 19% 50%;
     --primary-foreground: 0 0% 100%;
-    --secondary: 196 15% 17%;
+    --secondary: 	190 92% 15%;
     --secondary-foreground: 196 15% 77%;
     --accent: 196 15% 17%;
     --accent-foreground: 196 15% 77%;
@@ -56,6 +64,14 @@
     --chart-3: 196 15% 17%;
     --chart-4: 196 15% 20%;
     --chart-5: 196 22% 44%;
+    --sidebar-background: 240 5.9% 10%;
+    --sidebar-foreground: 240 4.8% 95.9%;
+    --sidebar-primary: 224.3 76.3% 48%;
+    --sidebar-primary-foreground: 0 0% 100%;
+    --sidebar-accent: 240 3.7% 15.9%;
+    --sidebar-accent-foreground: 240 4.8% 95.9%;
+    --sidebar-border: 240 3.7% 15.9%;
+    --sidebar-ring: 217.2 91.2% 59.8%;
   }
 }
 
